# mcp

./: .env  Cargo.toml  README.md  mcp.json for lm studio
src/: main.rs
src/tools/: boilerplate_example.rs  get_time.rs  internet_lookup.rs  mod.rs  query_rustdocs.rs
